<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="partyplaner.partyplaner.LogIn.RegisterActivity">

    <!--
    <fragment
        android:id="@+id/fragment5"
        android:name="partyplaner.partyplaner.LogIn.LogoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_login_logo" />

    <fragment
        android:id="@+id/fragment2"
        android:name="partyplaner.partyplaner.LogIn.RegisterFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_register" />
    -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/people" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/logo"
            android:name="partyplaner.partyplaner.LogIn.LogoFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_login_logo" />

        <fragment
            android:id="@+id/fragment"
            android:name="partyplaner.partyplaner.LogIn.RegisterFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_register" />
    </LinearLayout>

</FrameLayout>
